fix form styles and alignment

--- a/src/mixins.scss
+++ b/src/mixins.scss
@@ -1,10 +1,7 @@
-@mixin alignCenter($width, $height) {
-  width: $width;
-  height: $height;
-  margin-top: -$height/2;
-  margin-left: -$width/2;
+@mixin alignCenter() {
   top: 50%;
   left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 @mixin alignCenterX($width) {
